updating codebase for live

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 NODE_ENV=development
 DB_CONN_ENV=development
-DB_CONN_ENV_LIVE=live
+DB_CONN_ENV_LIVE=production
 DB_CONN_ENV_STAGING=staging
 DATABASE_ENV=mysql
 DATABASE_HOST=127.0.0.1
