--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 NODE_ENV=development
-DB_CONN_ENV=development
+DB_CONN_ENV_DEV=development
 DB_CONN_ENV_LIVE=production
 DB_CONN_ENV_STAGING=staging
 DATABASE_ENV=mysql
